tests/resources/valid/error/handle.mamba
def a <- f(10) handle
    err => print "Something went wrong"
